$Id$

2009-09-11 David Heremans <david.heremans@gnu-linux.net>
	* Made the memoryviewer always start at an offset of "horBytes".
	* Introduced the backgroundmarker to indicate the selected address.
	* Fixed an asyncronisation problem which made the scrollbalk cycle
	  between previous values.

2009-09-10 David Heremans <david.heremans@gnu-linux.net>
	* You can now select the cpu register to follow.

2009-09-09 David Heremans <david.heremans@gnu-linux.net>
	* First steps towards MainMemoryViewer with Compass like
	  'Linked-to-register' functionality. For now at least 
	  one can enter the address for the memory viewer as hex value.

2008-05-06 Edwin Velds <e.velds@gmail.com>
	* Added disassemble restart at PC.

2008-04-19 Edwin Velds <e.velds@gmail.com>
	* Nearly full rewrite of CPU regs viewer.
	* Register values editor implemented.
	* Tooltip for values in binary and decimal.
	* Added class for writing values back to openmsx.

2008-04-18 Edwin Velds <e.velds@gmail.com>
	* Added saving op breakpoints.
	* Added restoring session breakpoints after connect.
	* Show session file in window title.

2008-04-17 Edwin Velds <e.velds@gmail.com>
	* Added preliminary support for saving debug sessions.
	  Only symbols currently supported. Note that file format may change
	  without prior notification or support for older files.
	* Added checks for modified sessions in new/open/quit.

2008-04-15 Edwin Velds <e.velds@gmail.com>
	* Added type selection to symbol manager.
	* Changed name/value editing behaviour to allow only a single editor.

2008-04-14 Edwin Velds <e.velds@gmail.com>
	* Added register selection to symbol manager.

2008-04-12 Edwin Velds <e.velds@gmail.com>
	* Implemented reload function in symbol manager.
	* Several fixes fixes to symbol manager.

2008-04-10 Edwin Velds <e.velds@gmail.com>
	* Update to symbol table gui:
		- Better handling of edits.
		- Changing of label slot locations.
		- GUI (re)stores size of window and columns.
