@@ -1,5 +1,9 @@
 $Id$
 
+2009-09-12 David Heremans <david.heremans@gnu-linux.net>
+	* Added tooltips to HexViewer.
+	* Directly update memoryviewer after linking to a register.
+
 2009-09-11 David Heremans <david.heremans@gnu-linux.net>
 	* Made the memoryviewer always start at an offset of "horBytes".
 	* Introduced the backgroundmarker to indicate the selected address.
